DEv.com.au -> Fixes

--- a/.gitignore
+++ b/.gitignore
@@ -2873,3 +2873,4 @@ works/westfield/westfieldPitch/index.html
 works/westfield/westfieldPitch/Westfieldpitch.mp4
 works/xmas/index.html
 works/xmas/Xmas.mp4
+img/casestudies/16-xmas.webm
